--- a/views/partials/stockData.jade
+++ b/views/partials/stockData.jade
@@ -1,5 +1,6 @@
 h1 Stock Data
 
 div(ng-controller="StockCtrl")
-    div(ng-repeat="stock in stocks")
-        p symbol: {{stock.symbol}}
+    h2 Url param symbol: {{symbol}}
+    div(ng-repeat="stock in stockData")
+        p stock data: {{stock}}
