--- a/views/partials/stockData.jade
+++ b/views/partials/stockData.jade
@@ -2,5 +2,5 @@ h1 Stock Data
 
 div(ng-controller="StockCtrl")
     h2 Url param symbol: {{symbol}}
-    div(ng-repeat="stock in stockData")
-        p stock data: {{stock}}
+    div(ng-repeat="stock in stockData.quotes.quote")
+        p stock data: {{stock.last}}
