--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,7 @@ html(ng-app="stockrApp")
     meta(charset='utf8')
     title Stockr App
     link(rel='stylesheet', href='http://netdna.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css')
+    link(rel='stylesheet' href='custom.css')
 
   body(class="container")
     div(ng-controller="StockCtrl")
@@ -27,15 +28,25 @@ html(ng-app="stockrApp")
         div(class="col-lg-9")
             h2 {{companyName}} ( {{symbol}} )
             div(id="stockChart" stock-chart chart-data="stockChartData" style="margin: 4em;")
-            div(id="instagram")
-                div(ng-repeat="url in photoURLs")
-                    img(src="{{url}}")
-                    br
+
+            div(slider class="slider")
+                img(class="slide" ng-repeat="slide in slides" ng-src="{{slide.url}}" ng-hide="!isCurrentSlideIndex($index)")
+                button(class="arrow prev" ng-click="nextSlide()" )
+                button(class="arrow next" ng-click="prevSlide()" )
+                nav(class="nav")
+                    div(class="wrapper")
+                        ul(class="dots")
+                            li(class="dot" ng-repeat="slide in slides")
+                                button(href="#" ng-class="{'active':isCurrentSlideIndex($index)}" ng-click="setCurrentSlideIndex($index);")
+            div(class="caption" ng-repeat="slide in slides" ng-hide="!isCurrentSlideIndex($index)") {{slide.title}}
 
     script(src='http://code.jquery.com/jquery-1.11.2.min.js')
     script(src='http://netdna.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.2/angular.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.2/angular-route.min.js')
     script(src='http://d3js.org/d3.v2.js')
+    script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular-animate.min.js")
+    script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular-touch.min.js")
+    script (src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.10.3/TweenMax.min.js")
     script(src='js/controller.js')
     script(src='js/app.js')
