--- a/views/layout.jade
+++ b/views/layout.jade
@@ -46,9 +46,7 @@ html(ng-app="stockrApp")
     script(src='http://netdna.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.2/angular.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.2/angular-route.min.js')
-    script(src='http://d3js.org/d3.v2.js')
-    script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular-animate.min.js")
-    script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular-touch.min.js")
-    script (src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.10.3/TweenMax.min.js")
+    script(src='http://d3js.org/d3.v3.min.js')
+    script(src='js/d3.layout.cloud.js')
     script(src='js/controller.js')
     script(src='js/app.js')
