--- a/public/custom.css
+++ b/public/custom.css
@@ -5,9 +5,8 @@ body {
 div #stockChart {
   padding-left: 50px;
   padding-top: 15px;
-  width: 50%;
-  margin: 0 auto;
-  font: 14px;
+  margin: 0 auto !important;
+  font-size: 14px;
 }
 
 .axis path,
