--- a/views/layout.jade
+++ b/views/layout.jade
@@ -27,7 +27,7 @@ html(ng-app="stockrApp")
                     h3 Enter your search terms for Flickr
                     input(type="text" placeholder="company name, controversy ..." class="form-control input-lg" ng-model="formData.searchTerm" required)
                     br
-                    button(type="submit" class="btn btn-primary btn-lg" ng-click="showResults()") Compare
+                    button(class="btn btn-primary btn-lg" ng-click="showResults()") Compare
 
         div(class="col-lg-9")
             div(ng-show="!stockChartData.length")
