Adds legend for word cloud

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -55,6 +55,8 @@ html(ng-app="stockrApp")
                 br
                 h3 Congress Word Cloud for {{queryDates[0]}}
                 div(id="congress-words")
+                div(id="word-cloud-legend")
+                    p Commonly used words are larger and slightly faded in color. Less common words are smaller and darker.
 
 
     script(src='http://code.jquery.com/jquery-1.11.2.min.js')
